--- a/catalog/view/theme/thehotpicklestore/template/common/footer.twig
+++ b/catalog/view/theme/thehotpicklestore/template/common/footer.twig
@@ -38,8 +38,8 @@
         </ul>
       </div>
     </div>
-    <hr>
-    <p>{{ powered }}</p>
+    {# <hr>
+    <p>{{ powered }}</p> #}
   </div>
 </footer>
 {% for script in scripts %}
