--- a/catalog/view/theme/thehotpicklestore/dev/scss/style.scss
+++ b/catalog/view/theme/thehotpicklestore/dev/scss/style.scss
@@ -3,4 +3,6 @@
 @import "./base/base";
 
 // Components
+@import "./components/footer";
+@import "./components/header";
 @import "./components/navbar";
