--- a/catalog/view/theme/thehotpicklestore/dev/scss/components/_header.scss
+++ b/catalog/view/theme/thehotpicklestore/dev/scss/components/_header.scss
@@ -7,7 +7,7 @@ header {
     }
     @media (min-width: 992px) {
         .container {
-            width: 100% !important;
+            width: 100%;
         }
     }
 }
