--- a/catalog/view/theme/thehotpicklestore/dev/scss/style.scss
+++ b/catalog/view/theme/thehotpicklestore/dev/scss/style.scss
@@ -5,4 +5,5 @@
 // Components
 @import "./components/footer";
 @import "./components/header";
+@import "./components/menu";
 @import "./components/navbar";
