--- a/catalog/view/theme/thehotpicklestore/template/common/header.twig
+++ b/catalog/view/theme/thehotpicklestore/template/common/header.twig
@@ -18,8 +18,9 @@
             <meta name="keywords" content="{{ keywords }}"/>
         {% endif %}
         <script src="catalog/view/javascript/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
-        <link href="catalog/view/javascript/bootstrap/css/bootstrap.min.css" media="screen" rel="stylesheet"/>
-        <script src="catalog/view/javascript/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <link href="catalog/view/javascript/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
         <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,300,700" rel="stylesheet" type="text/css"/>
         <link href="catalog/view/theme/thehotpicklestore/stylesheet/stylesheet.css" rel="stylesheet">
@@ -50,7 +51,7 @@
                             <li class="nav-item dropdown">
                                 <a href="{{ account }}" title="{{ text_account }}" class="dropdown-toggle" data-toggle="dropdown" class="nav-link">
                                     <i class="fa fa-user"></i>
-                                    <span class="hidden-xs hidden-sm hidden-md">{{ text_account }}</span>
+                                    <span class="hide">{{ text_account }}</span>
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right">
@@ -81,16 +82,16 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a href="<?php echo get_site_url() ?>/" class="nav-link">
+                                <a href="" class="nav-link">
                                     <i class="fa fa-home"></i>                                        
-                                    <span class="hidden-xs hidden-sm hidden-md">Blog</span>
+                                    <span class="hide">Blog</span>
                                 </a>
                             </li>
                             
                             <li class="nav-item">
-                                <a href="<?php echo get_site_url() ?>/" class="nav-link">
+                                <a href="" class="nav-link">
                                     <i class="fa fa-comments"></i>
-                                    <span class="hidden-xs hidden-sm hidden-md">Discussion Board</span>
+                                    <span class="hide">Discussion Board</span>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -101,7 +102,7 @@
                             {# <li class="nav-item">
                                 <a href="{{ checkout }}" title="{{ text_checkout }}" class="nav-link">
                                     <i class="fa fa-share"></i>
-                                    <span class="hidden-xs hidden-sm hidden-md">{{ text_checkout }}</span>
+                                    <span class="hide">{{ text_checkout }}</span>
                                 </a>
                             </li> #}
                             
