--- a/catalog/view/theme/thehotpicklestore/template/common/menu.twig
+++ b/catalog/view/theme/thehotpicklestore/template/common/menu.twig
@@ -1,45 +1,17 @@
 {% if categories %}
-<div class="container">
-  <nav id="menu" class="navbar">
-    <div class="navbar-header"><span id="category" class="visible-xs">{{ text_category }}</span>
-      <button type="button" class="btn btn-navbar navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-bars"></i></button>
-    </div>
-    <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav">
-        {% for category in categories %}
-        {% if category.children %}
-        <li class="dropdown"><a href="{{ category.href }}" class="dropdown-toggle" data-toggle="dropdown">{{ category.name }}</a>
-          <div class="dropdown-menu">
-            <div class="dropdown-inner"> {% for children in category.children|batch(category.children|length / category.column|round(1, 'ceil')) %}
-              <ul class="list-unstyled">
-                {% for child in children %}
-                <li><a href="{{ child.href }}">{{ child.name }}</a></li>
-                {% endfor %}
-              </ul>
-              {% endfor %}</div>
-            <a href="{{ category.href }}" class="see-all">{{ text_all }} {{ category.name }}</a> </div>
-        </li>
-        {% else %}
-        <li><a href="{{ category.href }}">{{ category.name }}</a></li>
-        {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-  </nav>
-</div>
-
-{# ******************************** New ******************************** #}
 
 <div class="container">
   <div class="row">
-    <ul>
-        {% for category in categories %}
-        <a href="{{ category.href }}">{{ category.name }}</a>
-        {# <br><br>
-        <li>{{ dump(category) }}</li>
-        <hr> #}
-        {% endfor %}
-    </ul>
+    {% for category in categories %}
+    <div class="col-md-6 col-lg-3">
+      <div class="card card-menu">
+        <img class="card-img-top" src="image/{{category.image}}" alt="{{category.name}}">
+        <div class="card-body">
+          <h5 class="card-title">{{category.name}}</h5>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
   </div>
 </div>
 {% endif %} 
